
2017-07-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* screenio.c: moved cob_sys_get_char and added parts for !COB_GEN_SCREENIO

2017-07-20  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.h [__MINGW32__]: added missing defines

2017-07-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.h: increased MAX_FD_RECORD to 64MB and introduced
	  MAX_FD_RECORD_IDX with the old 64KB limit

2017-07-16  Edward Hart <edward.dan.hart@gmail.com>

	* exception.def: update to COBOL 2014 and added finalizer exception.

2017-07-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* fileio.c: checked the now optional sort-return before accessing it

2017-06-16  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: added CODE_COVERAGE parts as provided by AX_CODE_COVERAGE
	* general:
	  surrounded exception ABORTs that cannot be tested by LCOV_EXCP markers

2017-06-04  Ron Norman <rjn@inglenet.com>

	* common.c: Improved 'cobcrun -r' display for when
	  unsetenv is used in runtime.cfg to show environment variable
	  was removed and runtime.cfg variable was then present

2017-05-26  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* system.def: replaced misleading name C$PRINTABLE (OC-extension,
	  not a C$ -> ACUCOBOL extension!) by CBL_GC_PRINTABLE (old name
	  still supported for legacy reasons)

2017-05-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c: renamed cob_get_current_date_and_time to
	  cob_get_current_date_and_time_from_os
	* common.c, coblocal.c: store datetime from COB_CURRENT_DATE as
	  cob_time and check for this in cob_get_current_date_and_time
	  instead of in every function
	* common.c: allow partial replace of datetime (including offset only)
	  by COB_CURRENT_DATE

2017-05-24  Edward Hart <edward.dan.hart@gmail.com>

	* common.c: fixed minor style issues, mostly missing spaces around
	  operators.

2017-05-22  Ron Norman <rjn@inglenet.com>
