@@ -448,7 +448,7 @@ AT_DATA([prog.cob], [
        PROGRAM-ID. prog.
        ENVIRONMENT DIVISION.
        CONFIGURATION SECTION.
-      
+
        INPUT-OUTPUT SECTION.
        FILE-CONTROL.
            SELECT FLATFILE ASSIGN EXTERNAL RELFIX
@@ -465,43 +465,43 @@ AT_DATA([prog.cob], [
        FILE SECTION.
        FD  FLATFILE
            BLOCK CONTAINS 5 RECORDS.
-      
+
        01  TSPFL-RECORD.
            10  CM-CUST-NUM                     PICTURE X(8).
            10  CM-COMPANY                      PICTURE X(25).
            10  CM-DISK                         PICTURE X(8).
            10  CM-NO-TERMINALS                 PICTURE 9(4).
-      
+
        FD  FLATFILE2
            BLOCK CONTAINS 5 RECORDS.
-      
+
        01  TSP2-RECORD.
            10  C2-CUST-NUM                     PICTURE X(8).
            10  C2-COMPANY                      PICTURE X(25).
            10  C2-DISK                         PICTURE X(8).
            10  C2-NO-TERMINALS                 PICTURE 9(4).
-      
+
        WORKING-STORAGE SECTION.
-      
+
        77  MAX-SUB           VALUE  6          PICTURE 9(4) COMP SYNC.
        77  CUST-STAT                           PICTURE X(2).
        77  REC-NUM           VALUE  1          PICTURE 9(4).
-      
+
        01  TEST-DATA.
-      
+
          02  DATA-CUST-NUM-TBL.
-      
+
            05  FILLER PIC X(8) VALUE "ALP00000".
            05  FILLER PIC X(8) VALUE "BET00000".
            05  FILLER PIC X(8) VALUE "DEL00000".
            05  FILLER PIC X(8) VALUE "EPS00000".
            05  FILLER PIC X(8) VALUE "FOR00000".
            05  FILLER PIC X(8) VALUE "GAM00000".
-      
+
          02  DATA-CUST-NUM REDEFINES DATA-CUST-NUM-TBL
                                        PIC X(8) OCCURS 6.
          02  DATA-COMPANY-TBL.
-      
+
            05  FILLER PIC X(25) VALUE "ALPHA ELECTRICAL CO. LTD.".
            05  FILLER PIC X(25) VALUE "BETA SHOE MFG. INC.      ".
            05  FILLER PIC X(25) VALUE "DELTA LUGGAGE REPAIRS    ".
@@ -511,7 +511,7 @@ AT_DATA([prog.cob], [
          02  DATA-COMPANY  REDEFINES DATA-COMPANY-TBL
                                        PIC X(25) OCCURS 6.
          02  DATA-ADDRESS-2-TBL.
-      
+
            05  FILLER PIC X(10) VALUE "ATLANTA   ".
            05  FILLER PIC X(10) VALUE "CALGARY   ".
            05  FILLER PIC X(10) VALUE "NEW YORK  ".
@@ -522,21 +522,21 @@ AT_DATA([prog.cob], [
                                        PIC X(10) OCCURS 6.
 
          02  DATA-NO-TERMINALS-TBL.
-      
+
            05  FILLER PIC 9(3) COMP-3 VALUE 10.
            05  FILLER PIC 9(3) COMP-3 VALUE 13.
            05  FILLER PIC 9(3) COMP-3 VALUE 75.
            05  FILLER PIC 9(3) COMP-3 VALUE 10.
            05  FILLER PIC 9(3) COMP-3 VALUE 90.
            05  FILLER PIC 9(3) COMP-3 VALUE 254.
-      
+
          02  DATA-NO-TERMINALS REDEFINES DATA-NO-TERMINALS-TBL
                                        PIC 9(3) COMP-3 OCCURS 6.
        01  WORK-AREA.
            05  SUB                             PICTURE 9(4) COMP SYNC.
                88  ODD-RECORD                  VALUE 1 3 5.
-      
-      
+
+
        PROCEDURE DIVISION.
 
            PERFORM LOADFILE.
@@ -549,7 +549,7 @@ AT_DATA([prog.cob], [
            ADD 1 TO C2-NO-TERMINALS
            REWRITE FILE FLATFILE2 FROM TSP2-RECORD
            READ FLATFILE2
-           DISPLAY "REWROTE " C2-CUST-NUM " Sts:" CUST-STAT 
+           DISPLAY "REWROTE " C2-CUST-NUM " Sts:" CUST-STAT
                    " Trms:" C2-NO-TERMINALS.
            CLOSE FLATFILE2.
            STOP RUN.
@@ -557,25 +557,25 @@ AT_DATA([prog.cob], [
        LOADFILE.
            DISPLAY "Loading sample program data file."
                             UPON CONSOLE.
-      
+
            OPEN OUTPUT FLATFILE.
-      
+
            PERFORM LOAD-RECORD
-                        VARYING SUB FROM 1 BY 1 
+                        VARYING SUB FROM 1 BY 1
                           UNTIL SUB > MAX-SUB.
-      
+
            DISPLAY "Sample program data file load complete."
                             UPON CONSOLE.
            CLOSE FLATFILE.
-      
+
        LOAD-RECORD.
-      
+
            MOVE SPACES                       TO TSPFL-RECORD.
            MOVE DATA-CUST-NUM      (SUB)     TO CM-CUST-NUM.
            MOVE DATA-COMPANY       (SUB)     TO CM-COMPANY.
            MOVE DATA-NO-TERMINALS  (SUB)     TO CM-NO-TERMINALS.
            IF  ODD-RECORD
-               MOVE "8417"                   TO CM-DISK 
+               MOVE "8417"                   TO CM-DISK
            ELSE
                MOVE "8470"                   TO CM-DISK.
            WRITE FILE FLATFILE FROM TSPFL-RECORD.
@@ -719,7 +719,7 @@ AT_CLEANUP
 
 
 AT_SETUP([Read on optional missing file])
-AT_KEYWORDS([FILEIO])
+AT_KEYWORDS([runfile])
 
 AT_DATA([prog.cob], [
        IDENTIFICATION DIVISION.
@@ -774,6 +774,39 @@ AT_CHECK([$COMPILE prog.cob], [0], [], [])
 AT_CHECK([./prog], [0], [1st Read on missing optional file = 10 OK
 2nd Read on missing optional file = 46 OK
 ], [])
+
+AT_CLEANUP
+
+
+AT_SETUP([EXTERNAL RELATIVE file])
+AT_KEYWORDS([runfile])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
+
+       ENVIRONMENT DIVISION.
+       INPUT-OUTPUT SECTION.
+       FILE-CONTROL.
+           SELECT my-file
+               ASSIGN TO "blahblah"
+               ORGANIZATION IS RELATIVE
+               RECORD KEY IS my-key.
+
+       DATA DIVISION.
+       FILE SECTION.
+       FD my-file EXTERNAL.
+       01 my-record.
+           03 my-key PIC X(80).
+           03 my-record-data PIC x(80).
+
+       PROCEDURE DIVISION.
+           CONTINUE
+           .
+])
+
+AT_CHECK([$COMPILE prog.cob], [0], [], [])
+AT_CHECK([./prog], [0], [], [])
 
 AT_CLEANUP
 
@@ -1023,4 +1056,3 @@ AT_CHECK([./prog2], [0], [], [])
 AT_CHECK([diff prog.cob prog3.cob], [0], [], [])
 
 AT_CLEANUP
-
