@@ -1,4 +1,9 @@
 
+2017-07-29  Edward Hart <edward.dan.hart@gmail.com>
+
+	* fileio.c (cob_file_external_addr): fixed bug #404, where the
+	  cob_file_key for a RELATIVE file was not allocated.
+
 2017-07-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* screenio.c: moved cob_sys_get_char and added parts for !COB_GEN_SCREENIO
